Modificando cadena de conexión

--- a/appsettings.json
+++ b/appsettings.json
@@ -7,6 +7,6 @@
   },
     "AllowedHosts": "*",
     "ConnectionStrings": {
-        "PubContext": "Server=DESKTOP-O1V3K0N; Database=crudExample; Trusted_Connection=True; Encrypt=False;"
+        "PubContext": "..."
     }
 }
